DOMjudge Programming Contest Judging System

Version 0.3.1 - CVS
-------------------
 - Added documentation on MySQL DB layout to INSTALL.
 - Improved SQL installation/cleaning scripts.

Version 0.3.0 - 5 July 2005
---------------------------
 - Added mass rejudging support per team,language,problem,judger.
 - Added FAQ in docs/FAQ.
 - Fix missing column_priv (domjudge_user,problem,cid).
 - Fix sorting for equal scores to be alphabetical on team name.
 - Miscellaneous documentation improvements.
 - Fix some problems with file permissions by setting those explicitly.
 - Config checker now checks for existence of testdata.{in,out}.
 - Web interface copes better with empty database tables.
 - Fixed that time_factor was inadvertently cast to int for output.
 - Add tooltips explaining the scoreboard summary row.
 - Made some enhancements to the Makefiles.
 - Support MySQL 3/4 privilege tables and sql files installation.

Version 0.2.0 - 23 February 2005
--------------------------------
 - Fixed faulty EPS-logo, finally.
 - Add database privileges and move sql-files to own directory.
 - Improve config.tex dependency.
 - Make the base URI of the web interface configurable and fix redirects
   to be compatible with the HTTP-specification.
 - Fix bug in getSubmissions() that caused a syntax error on the
   team-overview in the jury interface.
 - Added some notes on security to the INSTALL docs.
 - Symbolic links now included (subversion >= 1.1).
 - Fixed buffer size bug in log/error C-code.
 - Fix bug in submit_db where the problem name got case-normalised.
 - Feature: Add caching to the Scoreboard. This vastly improves the
   responsiveness and scalability of DOMjudge; outputting the scoreboard
   is now an O(1) operation in queries. (Closes: #1070079)
 - Some fixes to XHTML1.0 compliance.
 - In tables, the time is now printed as hh:mm (without seconds).
 - Complete rewrite of the clarification interface of both teams and jury.