@@ -3,15 +3,20 @@
 #
 # You can pipe this file into the 'mysql' command to set these permissions.
 #
+# THIS FILE SHOULD ALWAYS BE NON-READABLE!
+# (because of database-login usernames/passwords)
+#
 # $Id$
 
 USE mysql;
 
 # Add users and passwords
-# Change these default passwords, and change them in etc/passwords.php too!
-INSERT INTO user (Host, User, Password) VALUES ('localhost','domjudge_jury'  ,PASSWORD('jury'));
-INSERT INTO user (Host, User, Password) VALUES ('localhost','domjudge_team'  ,PASSWORD('team'));
-INSERT INTO user (Host, User, Password) VALUES ('localhost','domjudge_public',PASSWORD('public'));
+# Change these default passwords, and change them in etc/passwords.php
+# too! This can be done automatically with 'make gen_passwd' from the
+# SYSTEM_ROOT dir.
+INSERT INTO user (Host, User, Password) VALUES ('localhost','domjudge_jury'  ,PASSWORD('DOMJUDGE_JURY_PASSWD'));
+INSERT INTO user (Host, User, Password) VALUES ('localhost','domjudge_team'  ,PASSWORD('DOMJUDGE_TEAM_PASSWD'));
+INSERT INTO user (Host, User, Password) VALUES ('localhost','domjudge_public',PASSWORD('DOMJUDGE_PUBLIC_PASSWD'));
 
 # Juryaccount can do anything to the database
 INSERT INTO db (Host, Db, User, Select_priv, Insert_priv, Update_priv, Delete_priv) VALUES ('localhost','domjudge','domjudge_jury','Y','Y','Y','Y');
